update .pom